--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@
 *.xd
 
 design/
-README.template*
+README-template.md
+style-guide.md
+
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
